# fmnist_base

./: .gitignore  README.md  main.py  pyproject.toml
configs/: cofire.yaml  concentration.yaml  default.yaml  fashion_mlp_dfa.yaml  fashion_mlp_fff.yaml  fashion_mlp_forward_forward.yaml  fashion_mlp_mcf.yaml  fashion_spiking_bp.yaml  fashion_spiking_cg.yaml  fashion_spiking_concentration.yaml  mass_redistribution.yaml  tiny_spiking.yaml
src/alt_back/: __init__.py  cli.py  config.py
src/alt_back.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wandb/: latest-run
wandb/run-20251019_175638-feof4j6m/: run-feof4j6m.wandb
wandb/run-20251019_175850-fqzgq7ta/: run-fqzgq7ta.wandb
wandb/run-20251019_180524-imiuskqw/: run-imiuskqw.wandb
wandb/run-20251019_182914-i7pzi4du/: run-i7pzi4du.wandb
wandb/run-20251019_183034-n89hp2hl/: run-n89hp2hl.wandb
wandb/run-20251019_183318-5r1bznzd/: run-5r1bznzd.wandb
wandb/run-20251020_202307-dxr2duit/: run-dxr2duit.wandb
wandb/run-20251020_202440-nbe4qv1z/: run-nbe4qv1z.wandb
wandb/run-20251020_213846-hmanrjp8/: run-hmanrjp8.wandb
wandb/run-20251020_214345-haz3ij8z/: run-haz3ij8z.wandb
wandb/run-20251020_223015-zf5upzhv/: run-zf5upzhv.wandb
wandb/run-20251020_223054-3rucbvuo/: run-3rucbvuo.wandb
wandb/run-20251020_223210-js57fvr4/: run-js57fvr4.wandb
wandb/run-20251020_223229-katf41qz/: run-katf41qz.wandb
wandb/run-20251020_223623-lc2hjg1b/: run-lc2hjg1b.wandb
wandb/run-20251020_223821-bxa8qfta/: run-bxa8qfta.wandb
wandb/run-20251020_223904-8ud8p610/: run-8ud8p610.wandb
(+126 files in other folders)
